--- a/app/src/main/res/layout/create_posting_fragment.xml
+++ b/app/src/main/res/layout/create_posting_fragment.xml
@@ -1,154 +1,159 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
+
+
+<android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_width="match_parent"
+        tools:context=".MainActivity"
+        android:paddingVertical="40dp"
+        android:paddingHorizontal="20dp"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
 
-
-    <android.support.constraint.ConstraintLayout
+    <EditText
+            android:id="@+id/etJobTitle"
             android:layout_width="match_parent"
-            android:paddingVertical="40dp"
-            android:paddingHorizontal="20dp"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
-
-        <EditText
-                android:id="@+id/jobTitleET"
-                android:layout_width="match_parent"
-                android:inputType="textMultiLine"
-                android:autofillHints=""
-                android:hint="@string/job_title"
-                android:textColorHint="@color/colorPrimary"
-                android:padding="5dp"
-                android:textSize="30sp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
-                android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginRight="8dp"/>
+            android:inputType="textMultiLine"
+            android:autofillHints=""
+            android:hint="@string/job_title"
+            android:textColorHint="@color/colorPrimary"
+            android:padding="5dp"
+            android:textSize="30sp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginRight="8dp"/>
 
 
-        <EditText
-                android:id="@+id/locationET"
-                android:layout_width="357dp"
-                android:inputType="textMultiLine"
-                android:autofillHints=""
-                android:hint="@string/location"
+    <!--<EditText-->
+    <!--android:id="@+id/etLocationCoord"-->
+    <!--android:layout_width="357dp"-->
+    <!--android:inputType="textMultiLine"-->
+    <!--android:autofillHints=""-->
+    <!--android:hint="@string/location"-->
 
-                android:textColorHint="@color/colorPrimary"
+    <!--android:textColorHint="@color/colorPrimary"-->
 
-                android:textSize="15sp" android:layout_height="39dp"
-                android:layout_marginTop="36dp"
-                app:layout_constraintTop_toBottomOf="@+id/jobTitleET"
-                app:layout_constraintStart_toStartOf="@+id/jobTitleET"
-                app:layout_constraintEnd_toEndOf="@+id/jobTitleET"/>
+    <!--android:textSize="15sp" android:layout_height="39dp"-->
+    <!--android:layout_marginTop="36dp"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/etJobTitle"-->
+    <!--app:layout_constraintStart_toStartOf="@+id/etJobTitle"-->
+    <!--app:layout_constraintEnd_toEndOf="@+id/etJobTitle"/>-->
 
-        <Button
-                android:layout_width="114dp"
-                android:id="@+id/datePostedBTN"
-                android:layout_weight="1"
-                android:text="@string/date_posted"
-                android:layout_height="51dp"
-                app:layout_constraintStart_toEndOf="@+id/startTimeBTN" android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/contactET"
-                android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/contactET"/>
+    <!--<Button-->
+    <!--android:layout_width="114dp"-->
+    <!--android:id="@+id/datePostedBTN"-->
+    <!--android:layout_weight="1"-->
+    <!--android:text="@string/date_posted"-->
+    <!--android:layout_height="51dp"-->
+    <!--app:layout_constraintStart_toEndOf="@+id/startTimeBTN" android:layout_marginLeft="8dp"-->
+    <!--android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="@+id/etJobContact"-->
+    <!--android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginTop="8dp"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/etJobContact"/>-->
 
-        <EditText
-                android:id="@+id/salaryET"
-                android:layout_width="358dp"
-                android:inputType="textMultiLine"
-                android:autofillHints=""
-                android:hint="@string/salary"
+    <!--<EditText-->
+    <!--android:id="@+id/salaryET"-->
+    <!--android:layout_width="358dp"-->
+    <!--android:inputType="textMultiLine"-->
+    <!--android:autofillHints=""-->
+    <!--android:hint="@string/salary"-->
 
-                android:textColorHint="@color/colorPrimary"
+    <!--android:textColorHint="@color/colorPrimary"-->
 
-                android:textSize="15sp"
-                android:layout_height="44dp"
-                app:layout_constraintStart_toStartOf="@+id/requirementsET"
-                app:layout_constraintEnd_toEndOf="@+id/requirementsET"
-                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"
-                app:layout_constraintTop_toBottomOf="@+id/requirementsET"/>
+    <!--android:textSize="15sp"-->
+    <!--android:layout_height="44dp"-->
+    <!--app:layout_constraintStart_toStartOf="@+id/etJobRequirement"-->
+    <!--app:layout_constraintEnd_toEndOf="@+id/etJobRequirement"-->
+    <!--app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="4dp"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/etJobRequirement"/>-->
 
-        <Button
-                android:id="@+id/createBTN"
-                android:layout_width="match_parent"
-                android:text="@string/create_update"
+    <!--<Button-->
+    <!--android:id="@+id/createBTN"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:text="@string/create_update"-->
 
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                app:layout_constraintTop_toBottomOf="@+id/startTimeBTN"
-                app:layout_constraintStart_toStartOf="@+id/startTimeBTN"
-                app:layout_constraintEnd_toEndOf="@+id/datePostedBTN" app:layout_constraintHorizontal_bias="0.214"/>
-        <Button
-                android:layout_width="186dp"
-                android:id="@+id/startTimeBTN"
-                android:layout_weight="1"
-                android:text="@string/start_time"
-                android:layout_height="47dp"
-                app:layout_constraintStart_toStartOf="@+id/contactET"
-                app:layout_constraintEnd_toEndOf="@+id/contactET"
-                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/contactET"
-                app:layout_constraintHorizontal_bias="0.005"/>
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="16dp"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/startTimeBTN"-->
+    <!--app:layout_constraintStart_toStartOf="@+id/startTimeBTN"-->
+    <!--app:layout_constraintEnd_toEndOf="@+id/datePostedBTN" app:layout_constraintHorizontal_bias="0.214"/>-->
+
+    <!--<Button-->
+    <!--android:layout_width="186dp"-->
+    <!--android:id="@+id/startTimeBTN"-->
+    <!--android:layout_weight="1"-->
+    <!--android:text="@string/start_time"-->
+    <!--android:layout_height="47dp"-->
+    <!--app:layout_constraintStart_toStartOf="@+id/etJobContact"-->
+    <!--app:layout_constraintEnd_toEndOf="@+id/etJobContact"-->
+    <!--android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etJobContact"-->
+    <!--app:layout_constraintHorizontal_bias="0.005"/>-->
 
 
-        <EditText
-                android:id="@+id/descriptionET"
-                android:layout_width="356dp"
-                android:hint="@string/description"
-                android:inputType="textMultiLine"
-                android:autofillHints=""
-                android:textColorHint="@color/colorPrimary"
-                android:padding="5dp"
-                android:textSize="15sp"
-                android:layout_height="34dp"
-                app:layout_constraintStart_toStartOf="@+id/locationET"
-                app:layout_constraintEnd_toEndOf="@+id/locationET" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/locationET"/>
+    <!--<EditText-->
+    <!--android:id="@+id/etJobDescription"-->
+    <!--android:layout_width="356dp"-->
+    <!--android:hint="@string/description"-->
+    <!--android:inputType="textMultiLine"-->
+    <!--android:autofillHints=""-->
+    <!--android:textColorHint="@color/colorPrimary"-->
+    <!--android:padding="5dp"-->
+    <!--android:textSize="15sp"-->
+    <!--android:layout_height="34dp"-->
+    <!--tools:layout_editor_absoluteY="40dp" tools:layout_editor_absoluteX="20dp"/>-->
 
-        <EditText
-                android:id="@+id/requirementsET"
-                android:layout_width="356dp"
-                android:inputType="textMultiLine"
-                android:autofillHints=""
-                android:hint="@string/requirements"
-                android:textColorHint="@color/colorPrimary"
-                android:padding="5dp"
-                android:textSize="15sp"
-                android:layout_height="31dp"
-                app:layout_constraintStart_toStartOf="@+id/descriptionET"
-                app:layout_constraintEnd_toEndOf="@+id/descriptionET" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/descriptionET"/>
+    <EditText
+            android:id="@+id/etJobDescription"
+            android:layout_width="356dp"
+            android:inputType="textMultiLine"
+            android:autofillHints=""
+            android:hint="@string/requirements"
+            android:textColorHint="@color/colorPrimary"
+            android:padding="5dp"
+            android:textSize="15sp"
+            android:layout_height="31dp"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etJobTitle"
+            app:layout_constraintStart_toStartOf="@+id/etJobTitle"
+    />
 
-        <EditText
-                android:id="@+id/tagsET"
-                android:inputType="textMultiLine"
-                android:autofillHints=""
-                android:layout_width="357dp"
-                android:hint="@string/tags"
-                android:textColorHint="@color/colorPrimary"
-                android:textSize="15sp"
-                android:layout_height="38dp"
+    <Button
+            android:id="@+id/btnSubmit"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Submit"
+            style="@style/button_default" android:layout_marginTop="32dp"
+            app:layout_constraintTop_toBottomOf="@+id/etJobDescription" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
+            app:layout_constraintHorizontal_bias="0.5"/>
 
-                app:layout_constraintEnd_toEndOf="@+id/salaryET" app:layout_constraintStart_toStartOf="@+id/salaryET"
-                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/salaryET"/>
+    <!--<EditText-->
+    <!--android:id="@+id/etJobTags"-->
+    <!--android:inputType="textMultiLine"-->
+    <!--android:autofillHints=""-->
+    <!--android:layout_width="357dp"-->
+    <!--android:hint="@string/tags"-->
+    <!--android:textColorHint="@color/colorPrimary"-->
+    <!--android:textSize="15sp"-->
+    <!--android:layout_height="38dp"-->
 
-        <EditText
-                android:id="@+id/contactET"
-                android:layout_width="358dp"
-                android:hint="@string/contact"
-                android:inputType="textMultiLine"
-                android:autofillHints=""
-                android:textColorHint="@color/colorPrimary"
-                android:padding="5dp"
-                android:textSize="15sp"
-                android:layout_height="33dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toBottomOf="@+id/tagsET" app:layout_constraintEnd_toEndOf="@+id/tagsET"
-                app:layout_constraintStart_toStartOf="@+id/tagsET"/>
+    <!--app:layout_constraintEnd_toEndOf="@+id/salaryET" app:layout_constraintStart_toStartOf="@+id/salaryET"-->
+    <!--app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="8dp"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/salaryET"/>-->
 
-    </android.support.constraint.ConstraintLayout>
-</ScrollView>
+    <!--<EditText-->
+    <!--android:id="@+id/etJobContact"-->
+    <!--android:layout_width="358dp"-->
+    <!--android:hint="@string/contact"-->
+    <!--android:inputType="textMultiLine"-->
+    <!--android:autofillHints=""-->
+    <!--android:textColorHint="@color/colorPrimary"-->
+    <!--android:padding="5dp"-->
+    <!--android:textSize="15sp"-->
+    <!--android:layout_height="33dp"-->
+    <!--tools:layout_editor_absoluteY="86dp" tools:layout_editor_absoluteX="20dp"/>-->
+
+</android.support.constraint.ConstraintLayout>
