--- a/app/src/main/res/layout/job_post_row.xml
+++ b/app/src/main/res/layout/job_post_row.xml
@@ -3,19 +3,21 @@
                                              xmlns:app="http://schemas.android.com/apk/res-auto"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
-                                             android:layout_height="match_parent">
+                                             android:layout_height="wrap_content">
 
 
     <TextView
+            android:layout_margin="20dp"
             android:id="@+id/tvJobTitle"
             android:layout_gravity="center_vertical"
             android:textSize="30sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Job Title" android:layout_marginStart="28dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="28dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:text="Job Title"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginLeft="16dp"
+            android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.333"/>
     <TextView
             android:id="@+id/tvAuthor"
             android:layout_width="wrap_content"
@@ -25,6 +27,16 @@
             android:layout_marginLeft="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintBaseline_toBaselineOf="@+id/tvJobTitle"/>
+
+    <TextView
+            android:id="@+id/tvDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="JobDescription"
+            app:layout_constraintTop_toBottomOf="@+id/tvJobTitle" app:layout_constraintStart_toStartOf="@+id/tvJobTitle"
+            android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
+            android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="parent"/>
+
     <TextView
             android:id="@+id/tvJobPay"
             android:text="$40/HR"
