--- a/app/src/main/res/layout/login_activity.xml
+++ b/app/src/main/res/layout/login_activity.xml
@@ -23,8 +23,11 @@
             android:hint="Email Address" android:layout_marginTop="28dp"
             app:layout_constraintTop_toBottomOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
-            android:layout_marginStart="64dp" android:layout_marginEnd="64dp" android:layout_marginRight="64dp"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="64dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginEnd="64dp"
+            android:layout_marginRight="64dp"
             app:layout_constraintHorizontal_bias="0.0"/>
 
     <EditText
