--- a/app/src/main/res/layout/job_post_row.xml
+++ b/app/src/main/res/layout/job_post_row.xml
@@ -4,7 +4,17 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content">
+    <ImageView
+            android:contentDescription=""
+            android:id="@+id/btn_capture_photo"
+            android:layout_width="386dp"
+            android:layout_height="178dp"
+            android:src="@drawable/rectangle"
+            app:layout_constraintTop_toTopOf="parent"
 
+            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"/>
 
     <TextView
             android:layout_margin="20dp"
@@ -14,34 +24,37 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Job Title"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.333"/>
+            android:textColor="#FFFFFF"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/btn_capture_photo" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="8dp"/>
     <TextView
             android:id="@+id/tvAuthor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Author"
-            app:layout_constraintStart_toEndOf="@+id/tvJobTitle"
-            android:layout_marginLeft="8dp"
-            android:layout_marginStart="8dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tvJobTitle"/>
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@+id/tvJobTitle"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"/>
 
     <TextView
             android:id="@+id/tvDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="JobDescription"
-            app:layout_constraintTop_toBottomOf="@+id/tvJobTitle" app:layout_constraintStart_toStartOf="@+id/tvJobTitle"
-            android:layout_marginLeft="28dp" android:layout_marginStart="28dp"
-            android:layout_marginBottom="20dp" app:layout_constraintBottom_toBottomOf="parent"/>
+            android:textColor="#FFFFFF"
+            app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
+            app:layout_constraintStart_toStartOf="@+id/btn_capture_photo" android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp" android:layout_marginTop="8dp"/>
 
     <TextView
             android:id="@+id/tvJobPay"
             android:text="$40/HR"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
-            app:layout_constraintBaseline_toBaselineOf="@+id/tvAuthor"/>
+            android:textColor="#FFFFFF"
+            android:layout_width="62dp"
+            android:layout_height="26dp"
+            app:layout_constraintStart_toEndOf="@+id/tvJobTitle"
+            android:layout_marginLeft="164dp" android:layout_marginStart="164dp" android:layout_marginTop="24dp"
+            app:layout_constraintTop_toTopOf="@+id/btn_capture_photo"/>
 </android.support.constraint.ConstraintLayout>
