--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,39 +6,30 @@
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              tools:context=".MainActivity">
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
+            android:gravity="center_vertical"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:orientation="horizontal"
             android:background="@color/colorPrimary"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent" >
-        <TextView android:layout_width="wrap_content"
-                  android:layout_height="43dp"
-                  android:text="@string/app_name"
-                  android:textSize="30sp"
-
-                  android:textColor="#fff"
-                  android:layout_marginTop="8dp"
-                  app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
-                  app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="16dp"
-                  app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
-                  app:layout_constraintVertical_bias="0.444" android:id="@+id/textView"/>
+            app:layout_constraintEnd_toEndOf="parent">
+        <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/app_name"
+                android:textSize="30sp"
+                android:layout_marginLeft="20dp"
+                android:textColor="#fff"
+                android:id="@+id/textView"/>
 
         <ImageButton
-                android:visibility="visible"
                 android:background="@color/colorPrimary"
                 android:layout_width="50dp"
                 android:layout_height="40dp"
-                tools:srcCompat="@android:drawable/ic_menu_search"
-                android:layout_marginTop="8dp"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintVertical_bias="0.666" app:layout_constraintStart_toEndOf="@+id/textView"
-                android:layout_marginStart="8dp" android:layout_marginLeft="8dp"/>
-    </android.support.constraint.ConstraintLayout>
+                tools:src="@android:drawable/ic_menu_search"/>
+    </LinearLayout>
     <FrameLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="0dp"
@@ -55,11 +46,8 @@
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/navigation"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="52dp"
-            android:layout_marginStart="0dp"
-            android:layout_marginEnd="0dp"
-
             android:background="?android:attr/windowBackground"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
