--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorAccent">#000</color>
+    <color name="colorAccent">#DDFFE7</color>
     <color name="colorSpearmint">#98d7c2</color>
     <color name="colorPrimaryDark">#0b5757</color>
     <color name="colorPrimary">#29A0B1</color>
